--- a/httpz.cabal
+++ b/httpz.cabal
@@ -9,7 +9,7 @@ extra-source-files:  README.md
 executable httpz
   hs-source-dirs:    src
   main-is:           Main.hs
-  other-modules:     App.Application, App.Client, App.GET
+  other-modules:     App.Application, App.Client
   build-depends:     base >=4.12.0.0, bytestring, text,
                      aeson, http-client, http-types, http-api-data, req
   default-language:  Haskell2010
